[package]
name    = "ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { workspace = true }
napi-derive-ohos = { workspace = true }
pnet             = "0.33.0"
socket2          = "0.5.1"

[build-dependencies]
napi-build-ohos = { workspace = true }

[profile.release]
lto = true
